--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,9 @@
-/* styles go here */
+.form__field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form__block {
+  display: block;
+  margin-bottom: 20px;
+}
